2008-08-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Symbols with internal linkage
	don't need visibility attributes.

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.8 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp: Updated "About" dialog license
	text to reflect GPLv3 licensing.

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-xembed/gtkvrmlbrowser.cpp: Fixed invocation of
	G_DEFINE_TYPE to point at the parent type.

2008-08-12 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.7 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:6:0; updated libopenvrml-gl libtool library version to 7:2:0.

2008-08-12 Braden McDaniel  <braden@endoframe.com>

	Consistently use size_t when inserting stream handles into
	IOStreams.  ptrdiff_t is signed; so mixing this with size_t can
	lead to badness.

	* src/openvrml-player/player.cpp
	(openvrml_player_curl_source_callback(gpointer)): Cast the
	easy_handle to size_t instead of ptrdiff_t before inserting into
	the command stream.
	(openvrml_player_curl_write(void *, size_t, size_t, void *)): Cast
	the easy_handle to size_t instead of ptrdiff_t before inserting
	into the command stream.
	* mozilla-plugin/src/openvrml.cpp
	(NPP_NewStream(NPP, NPMIMEType, NPStream *, NPBool, uint16 *)):