@@ -1,5 +1,11 @@
 2008-08-15 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp
+	(openvrml::browser::load_url(const std::vector<std::string> &,
+	const std::vector<std::string> &)): Improved doc-comment.
+
+2008-08-15 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/openvrml/node.cpp: Symbols with internal linkage
 	don't need visibility attributes.
 
